SigmaCodebackup3rdSep/objects/Service_Contract_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Net_Value__c</fullName>
        <label>Unit Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Contract Line Items</relationshipLabel>
        <relationshipName>Service_Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <label>Service Contract</label>
        <referenceTo>Service_Contract__c</referenceTo>
        <relationshipLabel>Service Contract Line Items</relationshipLabel>
        <relationshipName>Service_Contract_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Service Contract Line Item</label>
    <nameField>
        <displayFormat>SCLI{0000}</displayFormat>
        <label>Service Contract Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>